--- a/css/media.css
+++ b/css/media.css
@@ -1,13 +1,11 @@
 @media (max-width: 768px) {
-  .app__tray__container {
-    padding: 20px 0;
-  }
   .app__food-wrapper {
     margin-bottom: 20px;
   }
   .app__food-inner {
     padding: 5px;
     gap: 10px;
+    min-height: 170px;
   }
   .app__food-item {
     width: 120px;
@@ -20,4 +18,55 @@
     font-size: 17px;
     line-height: 18px;
   }
+  .header__inner{
+    font-size: 18px;
+  }
+  .header__center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .header__center img{
+    max-width: 200px;
+  }
+}
+
+
+
+@media (max-width: 580px) {
+  .header__inner{
+    gap: 5px;
+    font-size: 16px;
+  }
+  .header__center img{
+    padding: 8px 10px 8px 10px;
+    max-width: 150px;
+  }
+  .header__img{
+    max-width: 25px;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .header{
+    margin-bottom: 10px;
+  }
+  .header__center {
+    display: none;
+  }
+  .app__tray-box{
+    margin-bottom: 0;
+  }
+  .app__btn {
+    font-size: 16px;
+  }
+}
+
+
+@media (max-width: 400px) {
+  .header__inner {
+    font-size: 15px;
+  }
+
 }
