--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   animation-timing-function: ease-in;
 }
 
-.done{
+.done {
   background-color: #00d32e !important;
 }
 
@@ -68,6 +68,28 @@ body {
   padding: 0 10px;
 }
 
+.wrapper {
+  background-image: url("../images/Ellipse_bg.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.wrapper::after {
+  /* content: '';
+  position: absolute;
+  top: 0;
+  left: 50%;
+  max-width: 900px;
+  width: 100%;
+  height: 900px;
+  background-image: url('../images/Ellipse_bg.svg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  z-index: 999; */
+}
+
 .app {
 }
 .app__tray-box {
@@ -91,6 +113,7 @@ body {
 }
 .app__tray-item-box {
   position: relative;
+  z-index: 3;
 }
 .app__tray-count {
   position: absolute;
@@ -119,7 +142,7 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
-  z-index: -1;
+  z-index: 2;
   left: 0;
   top: 0;
 }
@@ -130,6 +153,9 @@ body {
   width: 100%;
   margin-bottom: 30px;
   min-height: 190px;
+  -webkit-box-shadow: 0px 5px 33px -7px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 5px 33px -7px rgba(0, 0, 0, 1);
+  box-shadow: 0px 5px 33px -7px rgba(0, 0, 0, 1);
 }
 .app__food-inner {
   width: 100%;
@@ -159,6 +185,9 @@ body {
   background-color: rgba(0, 0, 0, 0.096);
   transition: all 0.3s;
   position: relative;
+-webkit-box-shadow: 5px 5px 5px 0px rgba(48,48,48,1);
+-moz-box-shadow: 5px 5px 5px 0px rgba(48,48,48,1);
+box-shadow: 5px 5px 5px 0px rgba(48,48,48,1);
 }
 
 .app__food-item:hover {
@@ -167,10 +196,10 @@ body {
   transform: scale(1.02);
 }
 .app__food-item:nth-child(odd):hover {
-  transform: rotate(5deg);
+  transform: rotate(2deg);
 }
 .app__food-item:nth-child(even):hover {
-  transform: rotate(-5deg);
+  transform: rotate(-2deg);
 }
 .app__food-img {
   width: 70px;
@@ -193,6 +222,24 @@ body {
 
 .app__food-mobile__add-box {
   display: none;
+}
+.app__tray-btn {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+.app__tray-prev {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .3s;
+}
+.app__tray-prev:hover{
+  transform: scale(1.02);
+}
+.app__tray-prev__img {
+  max-width: 30px;
+  max-height: 30px;
 }
 
 .app__food-mobile__add {
@@ -220,6 +267,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 30px;
+
 }
 .app__btn {
   margin: 0 auto;
@@ -233,6 +282,9 @@ body {
   position: relative;
   transition: all 0.5s;
   user-select: none;
+  -webkit-box-shadow: 5px 5px 5px 0px rgba(48,48,48,1);
+-moz-box-shadow: 5px 5px 5px 0px rgba(48,48,48,1);
+box-shadow: 5px 5px 5px 0px rgba(48,48,48,1);
 }
 
 .app__btn:active {
@@ -299,7 +351,7 @@ body {
 
 .modal {
   display: none;
-  position: absolute;
+  position: fixed;
   z-index: 101;
   left: 0;
   top: 0;
@@ -310,10 +362,18 @@ body {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+.modal__complete-img{
+  max-width: 100px;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
 .modal__inner {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 
 .hope {
@@ -444,7 +504,7 @@ body {
   text-align: center;
 }
 
-.form__list-orders-title{
+.form__list-orders-title {
   text-align: center;
 }
 
@@ -471,28 +531,30 @@ body {
   justify-content: space-between;
 }
 
-.error-message{
+.error-message {
   color: red !important;
   text-align: center;
 }
 
-.invalid{
-border: red solid 2px;
+.invalid {
+  border: red solid 2px;
 }
 
-input:valid, select:valid {
+input:valid,
+select:valid {
   border: black solid 2px;
 }
-
-
 
 /*CONTROL PANEL*/
 
 .header {
   padding: 10px 0;
   user-select: none;
-  background-color: rgb(0 0 0 / 18%);
+  background-color: rgb(0 0 0 / 10%);
   margin-bottom: 30px;
+  -webkit-box-shadow: 0px 5px 33px -7px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 5px 33px -7px rgba(0, 0, 0, 1);
+  box-shadow: 0px 5px 33px -7px rgba(0, 0, 0, 1);
 }
 
 .header__inner {
@@ -502,22 +564,22 @@ input:valid, select:valid {
   color: #fff;
   font-size: 23px;
 }
-.header__img{
+.header__img {
   max-width: 35px;
 }
-.header__right{
+.header__right {
   display: flex;
   gap: 10px;
   align-items: center;
 }
 
-.header__link-box{
+.header__link-box {
   display: flex;
   align-items: center;
   color: transparent;
 }
 
-.header__center img{
+.header__center img {
   margin-top: 5px;
   padding: 15px 25px 15px 25px;
   background-color: white;
@@ -531,11 +593,9 @@ input:valid, select:valid {
 .panel__inner {
   display: flex;
   gap: 10px;
-  align-items: center;
 }
 .panel__menu-box {
-  background-color: #0A2A22;
-
+  background-color: #0a2a22;
 }
 .panel-box {
   width: 100%;
@@ -546,33 +606,33 @@ input:valid, select:valid {
   color: #fff;
 }
 .panel__orders-box {
-  background-color: #E3F6CE;
+  background-color: #e3f6ce;
 }
-.panel__menu__item-delete{
+.panel__menu__item-delete {
   padding: 7px;
   border-radius: 10px;
-  transition: all .5s;
+  transition: all 0.5s;
   border: 1px solid transparent;
 }
-.panel__menu__item-delete:hover{
+.panel__menu__item-delete:hover {
   border: 1px solid red;
 }
-.panel__menu__item-delete{
+.panel__menu__item-delete {
   padding: 7px;
   border-radius: 10px;
-  transition: all .5s;
-   border: 1px solid transparent;
+  transition: all 0.5s;
+  border: 1px solid transparent;
 }
-.panel__menu__item-delete:hover{
+.panel__menu__item-delete:hover {
   border: 1px solid red;
 }
-.panel__menu__item-delete{
+.panel__menu__item-delete {
   padding: 7px;
   border-radius: 10px;
-  transition: all .5s;
-   border: 1px solid transparent;
+  transition: all 0.5s;
+  border: 1px solid transparent;
 }
-.panel__menu__item-delete:hover{
+.panel__menu__item-delete:hover {
   border: 1px solid red;
 }
 
@@ -588,7 +648,7 @@ input:valid, select:valid {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #04B486;
+  background-color: #04b486;
   border: yellow 3px dashed;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -610,15 +670,14 @@ input:valid, select:valid {
 }
 .panel__order-item {
   position: relative;
-  padding-top: 5px;
+  padding-top: 35px;
   margin-bottom: 20px;
 }
-.panel__order-item-box{
+.panel__order-item-box {
   padding: 15px;
+  padding-top: 25px;
   border-radius: 0 10px 10px;
-  background-color: #0B3B2E;
-  /*background-color: rgb(9 74 65 / 100%)*/
-
+  background-color: #0b3b2e;
 }
 .panel__order-timeout {
   position: absolute;
@@ -626,8 +685,14 @@ input:valid, select:valid {
   left: 0px;
   padding: 15px;
   border-radius: 10px;
-  z-index: -1;
-  background-color:rgb(9 74 65 / 100%)
+  z-index: 10;
+  background-color: #0b3b2e;
+}
+.panel__order-date{
+  right: 0;
+  left: auto;
+  z-index: 1;
+  top: 0;
 }
 .panel__order-top {
   display: flex;
@@ -642,9 +707,9 @@ input:valid, select:valid {
   padding: 12px;
   background-color: rgb(247, 247, 247);
   border-radius: 30px;
-  transition: all .5s;
+  transition: all 0.5s;
 }
-.panel__order-marker__btn:hover{
+.panel__order-marker__btn:hover {
   background-color: rgba(247, 247, 247, 0.459);
 }
 .panel__orders-list__items {
