--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,13 @@ body {
   }
 }
 
+.animate__animated.animate__fadeInDown {
+  --animate-duration: 2s;
+}
+.animate__animated.animate__fadeInUp {
+  --animate-duration: 2s;
+}
+
 .blur-hide {
   animation-name: blur-hide;
   animation-duration: 300ms;
