--- a/css/media.css
+++ b/css/media.css
@@ -18,63 +18,70 @@
     font-size: 17px;
     line-height: 18px;
   }
-  .header__inner{
+  .header__inner {
     font-size: 18px;
   }
-  .header__center{
+  .header__center {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .header__center img{
+  .header__center img {
     max-width: 200px;
   }
   .notification__item {
-  font-size: 14px;
-  line-height: 16px;
-  padding: 6px;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 6px;
+  }
 }
-}
-
-
 
 @media (max-width: 580px) {
-  .header__inner{
+  .header__inner {
     gap: 5px;
     font-size: 16px;
   }
-  .header__center img{
+  .header__center img {
     padding: 8px 10px 8px 10px;
     max-width: 150px;
   }
-  .header__img{
+  .header__img {
     max-width: 25px;
   }
 }
 
-
 @media (max-width: 480px) {
-  .header{
+  .header {
     margin-bottom: 10px;
   }
   .header__center {
     display: none;
   }
-  .app__tray-box{
+  .app__tray-box {
     margin-bottom: 0;
   }
   .app__btn {
     font-size: 16px;
   }
-  .notification__inner{
+  .notification__inner {
     max-height: 80px;
   }
+  .app__orders-list-btn {
+    right: 15px;
+    bottom: 15px;
+    padding: 25px;
+  }
+  .app__orders-list-img {
+    width: 35px;
+    height: 35px;
+  }
+  .personal__orders-box{
+    font-size: 15px;
+  }
 }
-
 
 @media (max-width: 400px) {
   .header__inner {
     font-size: 15px;
   }
-
 }
