--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,29 @@ body {
   z-index: 99;
   display: none;
 }
+.loader-menu{
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 99;
+  display: none;
+}
+.loader-box-menu {
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 99;
+  display: none;
+}
 .load__img {
   max-width: 20px;
 }
-
+.loader-menu_users::after{
+  width: 100px !important;
+  height: 100px !important;
+}
 .loader {
   display: flex;
   justify-content: center;
@@ -279,6 +298,7 @@ body {
   -webkit-box-shadow: 0px 5px 33px -7px rgba(0, 0, 0, 1);
   -moz-box-shadow: 0px 5px 33px -7px rgba(0, 0, 0, 1);
   box-shadow: 0px 5px 33px -7px rgba(0, 0, 0, 1);
+  position: relative;
 }
 .app__food-inner {
   width: 100%;
@@ -290,7 +310,8 @@ body {
   overflow-y: auto;
 }
 .app__food-item {
-  width: 120px;
+  max-width: 150px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -329,7 +350,7 @@ body {
   text-transform: uppercase;
   margin-bottom: 5px;
   user-select: none;
-  width: 100px;
+  padding: 0 10px;
 }
 .app__food-price {
   text-align: center;
@@ -728,6 +749,7 @@ select:valid {
 .header__link-box {
   display: flex;
   align-items: center;
+  color: transparent;
 }
 
 .header__center img {
@@ -748,6 +770,7 @@ select:valid {
 }
 .panel__menu-box {
   background-color: #0a2a22;
+  position: relative;
 }
 .panel-box {
   width: 100%;
