--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,27 @@ body {
   line-height: 24px;
   background-color: #5cb299;
 }
+body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #4f9783;
+}
+
+body::-webkit-scrollbar
+{
+  border-radius: 10px;
+	width: 12px;
+	background-color: #4f9783;
+}
+
+body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #ffffff;
+}
+
 
 .pulse {
   animation-name: anime;
@@ -309,6 +330,51 @@ body {
   padding: 15px;
   overflow-y: auto;
 }
+
+
+
+
+
+
+
+
+
+.app__food-inner::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+	border-radius: 13px;
+	background-color: #4f9783;
+  padding: 0 10px;
+}
+
+.app__food-inner::-webkit-scrollbar
+{
+  border-radius: 13px;
+	height: 9px;
+	background-color: #4f9783;
+}
+
+.app__food-inner::-webkit-scrollbar-thumb
+{
+	border-radius: 13px;
+	-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,.3);
+	background-color: #ffffff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .app__food-item {
   max-width: 150px;
   width: 100%;
