added new form styles

--- a/css/style.css
+++ b/css/style.css
@@ -39,22 +39,37 @@ body {
   gap: 15px;
 }
 .madal-orders-btn{
-  padding: 10px;
-  font-size: 17px;
+  font-family: 'Marker Felt';
+  padding: 7px;
   border-radius: 10px;
-  font-size: 18px;
+  font-size: 17px;
   line-height: 20px;
   transition: all .5s;
-  color: #000;
+  color: #2A1B0A;
 }
-.madal-orders-btn:hover{
+
+/*.madal-orders-btn:hover{
   transform: scale(1.05);
+  border: solid 4px;
+}*/
+
+.modal-send:hover{
+  transform: scale(1.05);
+  border: solid 4px green;
+  color: #0b3b2e;
 }
+.modal-no-send:hover{
+  transform: scale(1.05);
+  border: solid 4px red;
+  color: darkred;
+}
+
+
 .modal-send{
-  background-color: green;
+  border: green dashed 5px;
 }
 .modal-no-send{
-  background-color: red;
+  border: red dashed 5px;
 }
 .no-orders-dark{
   color: #000;
@@ -524,7 +539,7 @@ body {
   background-color: lemonchiffon;
   margin: 15px auto;
   padding: 20px;
-  border: 8px solid #ff8c00;
+  border: 8px solid #088A68;
   border-radius: 10px;
   max-width: 1200px;
   width: 100%;
@@ -535,7 +550,7 @@ body {
   background-color: #f5f3ea;
   margin: 15px auto;
   padding: 20px;
-  border: 8px solid #ff8c00;
+  border: 8px solid #088A68;
   border-radius: 10px;
   max-width: 400px;
   width: 100%;
@@ -577,20 +592,12 @@ body {
   margin-bottom: 10px;
 }
 
-.form input {
+.form input,.form__select  {
   margin-bottom: 15px;
   padding: 10px;
   background-color: rgba(255, 255, 255, 0.705);
   border-radius: 5px;
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
-}
-
-.form__select {
-  margin-bottom: 10px;
-  border: none;
-  padding: 10px;
-  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
-  color: #000;
 }
 
 .form__btn {
@@ -626,7 +633,7 @@ body {
   align-items: center;
   width: 40px;
   height: 40px;
-  background-color: #ff8c00;
+  background-color: #088A68;
   border-radius: 50%;
   position: absolute;
   left: 5px;
