--- a/css/style.css
+++ b/css/style.css
@@ -674,6 +674,7 @@ body::-webkit-scrollbar-thumb
   background-color: rgba(255, 255, 255, 0.705);
   border-radius: 5px;
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  color: #000;
 }
 
 .form__btn {
